# ASR

./: AndroidManifest.xml  AudioRecorderManager.java  AudioUtils.java  CantoneseTokenizer.java  CommandParser.java  Folder_Create.bat  MainActivity.java  OfflineCantoneseApp.java  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PermissionManager.java  TensorFlowLiteHelper.java  WhisperCantoneseRecognizer.java  build.gradle  settings.gradle
.kiro/specs/cantonese-speech-recognition/: design.md  requirements.md  tasks.md
.kiro/specs/cantonese-voice-app/: design.md  reference.md  requirements.md  tasks.md
.kiro/steering/: chinese-communication.md  project-documentation.md
CantoneseVoiceApp/: .eslintrc.js  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
CantoneseVoiceApp/android/: settings.gradle
CantoneseVoiceApp/android/app/: _BUCK  build.gradle
CantoneseVoiceApp/ios/: Podfile
CantoneseVoiceApp/ios/APIControlledApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
CantoneseVoiceApp/ios/APIControlledApp.xcodeproj/: project.pbxproj
CantoneseVoiceApp/ios/CantoneseVoiceApp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
CantoneseVoiceApp/ios/CantoneseVoiceApp.xcodeproj/: project.pbxproj
CantoneseVoiceApp/src/: test.ts
Cantonese_API/: settings.gradle
Cantonese_API/app/: build.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  audio_utils.cpp  whisper_engine.cpp  whisper_engine.h  whisper_jni.cpp
asserts/: model_info.json  preprocessor_config.json  tokenizer_config.json
gradle/wrapper/: gradle-wrapper.properties
(+111 files in other folders)
